WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
160730
Optimization in Node.replaceChild() is not spec-compliant
https://bugs.webkit.org/show_bug.cgi?id=160730
Summary
Optimization in Node.replaceChild() is not spec-compliant
Chris Dumez
Reported
2016-08-09 21:45:24 PDT
We have an optimization in Node.replaceChild() to avoid doing any work when the reference child and the new child are the same node. This optimization is not spec-compliant: -
https://dom.spec.whatwg.org/#concept-node-replace
This is an issue because it is observable via Mutation observers / listeners or DOM ranges.
Attachments
Patch
(10.67 KB, patch)
2016-08-09 21:59 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2016-08-09 21:59:34 PDT
Created
attachment 285713
[details]
Patch
WebKit Commit Bot
Comment 2
2016-08-09 22:46:00 PDT
Comment on
attachment 285713
[details]
Patch Clearing flags on attachment: 285713 Committed
r204326
: <
http://trac.webkit.org/changeset/204326
>
WebKit Commit Bot
Comment 3
2016-08-09 22:46:06 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug