Optimization in Node.replaceChild() is not spec-compliant https://bugs.webkit.org/show_bug.cgi?id=160730

Reviewed by Ryosuke Niwa.

LayoutTests/imported/w3c:

Rebaseline several W3C tests now that more checks are passing.

* web-platform-tests/dom/nodes/MutationObserver-childList-expected.txt:
* web-platform-tests/dom/ranges/Range-mutations-expected.txt:

Source/WebCore:

We have an optimization in Node.replaceChild() to avoid doing any work
when the reference child and the new child are the same node. This
optimization is not spec-compliant:
- https://dom.spec.whatwg.org/#concept-node-replace

This is an issue because it is observable via Mutation observers /
listeners or DOM ranges.

To address the issue, this patch drops the optimization. This is
probably not common enough to be worth optimizing for. However,
if it turns out to regress performance of things we care about,
we can fall back to do the optimization only in cases where it
is not observable.

No new tests, rebaselined existing tests.

* dom/ContainerNode.cpp:
(WebCore::ContainerNode::replaceChild):
1. Drop the oldChild == newChild optimization which is not in the
   specification.
2. Add a null check for oldChild.parentNode() before trying to
   remove it from its parent, as per step 12 of the specification.
   oldChild.parentNode() is null when oldChild is newChild.
3. Make sure we enqueue separate mutation records for the adoption
   of newNode into parent's node document and for the removal of
   oldChild / insertion of newChild. This is mandated by the
   specification (steps 10 and 15). Without this change, the
   following test would still not pass after dropping the
   optimization:
   imported/w3c/web-platform-tests/dom/nodes/MutationObserver-childList.html


Canonical link: https://commits.webkit.org/178840@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@204326 268f45cc-cd09-0410-ab3c-d52691b4dbfc